WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194402
REGRESSION(
r239887
): Crash under IDBConnectionToClient::didDeleteDatabase(WebCore::IDBResultData const&)
https://bugs.webkit.org/show_bug.cgi?id=194402
Summary
REGRESSION(r239887): Crash under IDBConnectionToClient::didDeleteDatabase(Web...
Sihui Liu
Reported
2019-02-07 11:06:53 PST
Thread 0 Crashed ↩:: Dispatch queue: com.apple.main-thread 0 com.apple.WebCore 0x00007fff48a46e36 WebCore::IDBServer::IDBConnectionToClient::didDeleteDatabase(WebCore::IDBResultData const&) + 22 1 com.apple.WebCore 0x00007fff48a85c64 WebCore::IDBServer::UniqueIDBDatabase::didDeleteBackingStore(unsigned long long) + 356 2 com.apple.WebCore 0x00007fff48a925e0 WebCore::IDBServer::UniqueIDBDatabase::executeNextDatabaseTaskReply() + 176 3 com.apple.JavaScriptCore 0x00007fff3e48e04f WTF::CrossThreadTaskHandler::handleTaskRepliesOnMainThread() + 239 4 com.apple.JavaScriptCore 0x00007fff3e3174a9 WTF::dispatchFunctionsFromMainThread() + 249 5 com.apple.Foundation 0x00007fff3d31a972 __NSThreadPerformPerform + 328 Crashed at: 52 void IDBConnectionToClient::didDeleteDatabase(const IDBResultData& result) 53 { 54 if (m_delegate) -> 55 m_delegate->didDeleteDatabase(result); 56 }
Attachments
Patch
(3.17 KB, patch)
2019-02-07 11:37 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2019-02-07 11:07:25 PST
<
rdar://problem/47858241
>
Sihui Liu
Comment 2
2019-02-07 11:37:05 PST
Created
attachment 361424
[details]
Patch
Geoffrey Garen
Comment 3
2019-02-07 14:04:21 PST
Comment on
attachment 361424
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2019-02-07 16:45:41 PST
Comment on
attachment 361424
[details]
Patch Clearing flags on attachment: 361424 Committed
r241170
: <
https://trac.webkit.org/changeset/241170
>
WebKit Commit Bot
Comment 5
2019-02-07 16:45:42 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug